...
import net.opatry.tasks.resources.task_list_menu_rename
import org.jetbrains.compose.resources.stringResource
import org.jetbrains.compose.ui.tooling.preview.Preview

@VisibleForTesting
internal object TaskListEditMenuTestTag {
    const val EDIT_MENU = "TASK_LIST_EDIT_MENU"
    const val RENAME = "TASK_LIST_RENAME"
    const val CLEAR_COMPLETED_TASKS = "TASK_LIST_CLEAR_COMPLETED_TASKS"
    const val DELETE = "TASK_LIST_DELETE"
    const val DELETE_NOT_ALLOWED_NOTICE = "TASK_LIST_DELETE_NOT_ALLOWED_NOTICE"
}

enum class TaskListEditMenuAction {
    Rename,
    ClearCompletedTasks,
...
